[package]
name = "symspell_complete_rapid"
version = "0.0.2"
authors = ["rainrambler <wanganyu@outlook.com>"]
license = "MIT"
categories = ["database-implementations", "data-structures"]
description = "typo-tolerant autocomplete in Rust (based on symspell_complete_rs, replace gxhash with rapidhash)"
documentation = "https://docs.rs/symspell_complete_rs/"
homepage = "https://github.com/rainrambler/symspell_complete_rs"
repository = "https://github.com/rainrambler/symspell_complete_rs"
readme = "README.md"
keywords = ["spellcheck","autocomplete", "symspell", "typo-tolerant"]
exclude = ["data/*", ".*"]
rust-version = '1.91'
edition = "2024"

[lib]
name = "symspell_complete_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
ahash ={ version = "0.8.12", features = ["serde"]}
regex = "1.12.2"
strsim = "0.11.1"
smallvec = "1.15.1"
unicode-normalization = "0.1.25"
itertools = "0.14.0"
compact_str = "0.9.0"
rapidhash = "4.2.1"

[lints.rust]
missing_docs = "warn"
unused_import_braces = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_qualifications = "warn"

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
overflow-checks = false
strip = "debuginfo"
